	ipsec-tools, iptables, libart, libcgi, libdrm, libfuse,
	libgpg-error, libidn, liblockfile, libpng, lighttpd, links,
	linux-fusion, lmbench, lrzsz, ltrace, make, module-init-tools,
	mplayer, mysql_client, nbd, ncurses, neon, netcat, netperf,
	ntfsprogs, openssl, php, qt, quagga, sqlite, sdl, sdl_mixer,
	sdl_sound, sdl_ttf, squashfs, swfdec, thttpd, tn5250, tremor,
	usbutils, webif, xkeyboard-config, xserver_xorg-server, xvkbd

	Removed packages: modutils, portage, rxvt

	Deprecated packages: dillo, libglib12, libgtk12

	Issues resolved (http://bugs.uclibc.org):

	#321:  alsa-lib uses host include files for python which breaks ...
	#361:  linux kernel configuration choice works incorrectly
	#387:  Tremor not installed to toolchain
	#401:  new package: ffmpeg
	#475:  uImage target for U-boot failed generating
	#583:  build fails with external x86_64 toolchain
	#729:  sstrip creates corrupted headers
	#835:  Package Dataflashboot-1.05 does not compile with buildroot...
	#1213: Move .config into output directory
	#1393: neon config fails libxml/parser.h: libxml2 requires, but not ...
	#1753: lmbench: convert to generic package infrastructure
	#1771: Fakeroot and the target/generic/device_table.txt create bad...
	#1807: LZMA 4.32.7, Required header file(s) are missing
	#1813: xkeyboard-config fails to build because of intltool problem
	#1879: Bump iptables to 1.4.8
	#1885: Add a bunch of lua modules
	#1897: Bump libusb to 1.0.7
	#1903: Bump tn5250 to 0.17.4 and migrate to autotargets
	#1909: netperf-2.4.5 fails to build because of undeclared SOCK_DCCP
	#1927: Bump file to 5.03 and migrate to autotargets
	#1933: Bump gawk to 3.1.8 and migrate to autotargets
	#1945: PHP: add sqlite3 dependency when using external lib
	#1951: Bump openssl to 0.9.8o
	#1957: Bump sqlite to 3.6.23.1
	#1975: Package removal/deprecation
	#1987: intltool: Fix spelling mistake
	#1993: Bump bash to 4.1.7(1) and migrate to autotargets
	#1999: Typo in path checking